--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -8,6 +8,7 @@
   padding: 4rem 0;
   flex: 1;
   display: flex;
+  margin-top: -180px;
   flex-direction: column;
   justify-content: center;
   align-items: center;
